[package]
name = "sp-scan-block"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoincore-rpc = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.116"
silentpayments = "0.1.1"
clap = { version = "4.4.2", features = ["derive"] }
